examples/test/testpolicy13093.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13093
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key33: value44
      key15: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value17
          key9: value29
      podSelector:
        matchLabels:
          key9: value45
          key41: value22
